--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -5,7 +5,7 @@
  * work well for content-centric websites.
  */
 
-@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Inter&display=swap');
 /* @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap'); */
 
 /* You can override the default Infima variables here. */
@@ -18,7 +18,7 @@
   --ifm-color-primary-lighter: #48a9f5;
   --ifm-color-primary-lightest: #70bbf7;
   --ifm-code-font-size: 95%;
-  font-family: 'Roboto';
+  font-family: 'Inter', sans-serif;
   /* font-family: 'IBM Plex Sans', sans-serif; */
 }
 
